--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
@@ -11,15 +11,26 @@
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelCdts">Choose CDT used to generate the BDT:</Label>
-                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboboxCdts" SelectionChanged="comboboxCdts_SelectionChanged"></ComboBox>
+                    <ComboBox ItemsSource="{Binding Path=Model.CandidateCdtNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCdts" SelectionChanged="comboboxCdts_SelectionChanged"></ComboBox>
                 </DockPanel>
                 <GroupBox Header="Attributes" Margin="5,1,1,4" Height="325">
                     <TabControl TabStripPlacement="Top" Margin="2,3,2,2" Name="tabControl">
                         <TabItem Header="CON" Name="tabCon">
                             <TabItem.Content>
                                 <DockPanel>
-                                    <ListBox Name="listboxCon" SelectionChanged="listboxCon_SelectionChanged">
-                                        <CheckBox Checked="listboxCon_ItemCheckBoxChecked" Unchecked="listboxCon_ItemCheckBoxChecked"></CheckBox>
+                                    <ListBox ItemsSource="{Binding Path=Model.CandidateConItems}" Name="listboxCon">
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" IsEnabled="False"/>
+                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="{Binding Path=ItemReadOnly}" Focusable="{Binding Path=ItemFocusable}" Cursor="{Binding Path=ItemCursor}" IsEnabled="True" BorderThickness="0" Background="Transparent" />
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                        <ListBox.Resources>
+                                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightBlue"/>
+                                            <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightBlue"/>
+                                        </ListBox.Resources>
                                     </ListBox>
                                 </DockPanel>
                             </TabItem.Content>
@@ -27,9 +38,20 @@
                         <TabItem Header="SUPs" Name="tabSups">
                             <TabItem.Content>
                                 <DockPanel>
-                                    <CheckBox Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxSups" Checked="checkboxSups_Checked" Unchecked="checkboxSups_Unchecked">Select all SUPs</CheckBox>
-                                    <ListBox Margin="0,2,0,0" Name="listboxSups" SelectionChanged="listboxSups_SelectionChanged">
-                                        <CheckBox Checked="listboxSups_ItemCheckBoxChecked" Unchecked="listboxSups_ItemCheckBoxChecked"></CheckBox>
+                                    <CheckBox Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxSups" Checked="checkboxSups_Checked" Unchecked="checkboxSups_Checked">Select all SUPs</CheckBox>
+                                    <ListBox ItemsSource="{Binding Path=Model.CandidateSupItems}" Margin="0,2,0,0" Name="listboxSups">
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" Checked="listboxSups_ItemCheckBoxChecked" Unchecked="listboxSups_ItemCheckBoxChecked" />
+                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="{Binding Path=ItemReadOnly}" Focusable="{Binding Path=ItemFocusable}" Cursor="{Binding Path=ItemCursor}" IsEnabled="True" BorderThickness="0" Background="Transparent" />
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                        <ListBox.Resources>
+                                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightBlue"/>
+                                            <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightBlue"/>
+                                        </ListBox.Resources>
                                     </ListBox>
                                 </DockPanel>
                             </TabItem.Content>
@@ -46,7 +68,7 @@
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtLibraries">BDT Library used to store the BDT:</Label>
-                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
+                    <ComboBox ItemsSource="{Binding Path=Model.CandidateBdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
                 </DockPanel>
             </StackPanel>
         </GroupBox>
