Update issue 118 - Working on test and implementation of UpccPrimLibrary with T4.

--- a/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrim.tt
+++ b/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrim.tt
@@ -61,7 +61,11 @@ namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
 <#
 		}
 
-		foreach (var metaTaggedValue in MetaModel.Prim.TaggedValues)
+///==========================================================================================================================
+/// Tagged Values
+///==========================================================================================================================
+
+		foreach (var metaTaggedValue in metaClassifier.TaggedValues)
 		{
 #>
 
