--- a/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrim.tt
+++ b/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrim.tt
@@ -8,42 +8,41 @@
 <#@ import namespace="VIENNAAddInUtils"#>
 <#@ import namespace="VIENNAAddInUtils.t4"#>
 using System.Collections.Generic;
-using System.Linq;
 using CctsRepository.PrimLibrary;
-using VIENNAAddIn.upcc3.ccts.util;
 using VIENNAAddInUnitTests.upcc3.newrepo.upcc.uml;
 
 <# 
 	var metaClassifier = MetaModel.Prim;
 	var library = MetaModel.GetPackageRelationsFor(metaClassifier).First().PackageType;
 	var umlClassifierType = "DataType";
+	var umlClassifier = "uml" + umlClassifierType;
 #>
 namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
 {
     internal class Upcc<#= metaClassifier.Name #> : I<#= metaClassifier.Name #>
     {
-        private readonly IUml<#= umlClassifierType #> uml<#= umlClassifierType #>;
+        private readonly IUml<#= umlClassifierType #> <#= umlClassifier #>;
 
-        public UpccPrim(IUml<#= umlClassifierType #> uml<#= umlClassifierType #>)
+        public UpccPrim(IUml<#= umlClassifierType #> <#= umlClassifier #>)
         {
-            this.uml<#= umlClassifierType #> = uml<#= umlClassifierType #>;
+            this.<#= umlClassifier #> = <#= umlClassifier #>;
         }
 
         #region I<#= metaClassifier.Name #> Members
 
         public int Id
         {
-            get { return uml<#= umlClassifierType #>.Id; }
+            get { return <#= umlClassifier #>.Id; }
         }
 
         public string Name
         {
-            get { return uml<#= umlClassifierType #>.Name; }
+            get { return <#= umlClassifier #>.Name; }
         }
 
 		public I<#= library.Name #> <#= library.Name #>
         {
-            get { return new Upcc<#= library.Name #>(uml<#= umlClassifierType #>.Package); }
+            get { return new Upcc<#= library.Name #>(<#= umlClassifier #>.Package); }
         }
 <# 
 		foreach (var dependency in MetaModel.GetDependenciesFor(metaClassifier))
@@ -54,8 +53,8 @@ namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
         {
             get
             {
-                var dependencies = umlDataType.GetDependenciesByStereotype(Stereotype.isEquivalentTo);
-                return dependencies.Count() == 0 ? null : new UpccPrim((IUmlDataType) dependencies.First().Target);
+                var dependency = <#= umlClassifier #>.GetFirstDependencyByStereotype("<#= dependency.Stereotype.ToString() #>");
+                return dependency == null ? null : new Upcc<#= dependency.TargetClassifierType.Name #>(dependency.Target);
             }
         }
 <#
@@ -71,17 +70,12 @@ namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
 
         public <#= metaTaggedValue.Cardinality == MetaCardinality.Many ? "IEnumerable<string>" : "string" #> <#= metaTaggedValue.AsPropertyName() #>
         {
-            get { return GetTaggedValue(TaggedValues.<#= metaTaggedValue.Name #>).<#= metaTaggedValue.Cardinality == MetaCardinality.Many ? "SplitValues" : "Value" #>; }
+            get { return uml<#= umlClassifierType #>.GetTaggedValue("<#= metaTaggedValue.Name #>").<#= metaTaggedValue.Cardinality == MetaCardinality.Many ? "SplitValues" : "Value" #>; }
         }
 <#
 		}
 #>
 
         #endregion
-
-        private IUmlTaggedValue GetTaggedValue(TaggedValues taggedValueName)
-        {
-            return umlDataType.GetTaggedValue(taggedValueName) ?? new EmptyUmlTaggedValue();
-        }
     }
 }
