--- a/trunk/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccEnumLibrary.tt
+++ b/trunk/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccEnumLibrary.tt
@@ -3,7 +3,7 @@
 <#@ assembly name="Upcc.dll" #>
 <#@ import namespace="Upcc"#>
 <# 
-	var metaPackage = MetaModel.PrimLibrary;
+	var metaPackage = MetaModel.EnumLibrary;
 	var extendManually = false;
 #>
 <#@ include file="UpccUmlPackage.tt" #>
