--- a/trunk/VIENNAAddIn/upcc3/repo/UpccPrimLibrary.tt
+++ b/trunk/VIENNAAddIn/upcc3/repo/UpccPrimLibrary.tt
@@ -6,4 +6,4 @@
 	var metaPackage = MetaModel.PrimLibrary;
 	var extendManually = false;
 #>
-<#@ include file="UpccUmlPackage.tt" #>
+<#@ include file="t4/UpccUmlPackage.tt" #>
